--- a/app/src/main/res/menu/orders.xml
+++ b/app/src/main/res/menu/orders.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/Profile"
+        android:title="Profile" />
+
+    <item
         android:id="@+id/pendingOrders"
         android:title="Orders" />
 
