--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/uber_move_bold"
-        android:padding="15dp"
+        android:padding="10dp"
         android:text="Add new product:"
         android:textColor="@color/black"
         android:textSize="20dp"
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:padding="30dp"
+        android:padding="15dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,54 +81,6 @@
             android:layout_height="1px"
             android:background="@color/myColor" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tvFrom"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="30dp"
-                android:backgroundTint="@color/myColor"
-                android:background="@drawable/orders_item_shape"
-                android:textCursorDrawable="@drawable/cursor_color"
-                android:layout_marginBottom="5dp"
-                android:gravity="center"
-                android:text="@string/From"
-                android:textColor="@color/white"
-                android:padding="10dp"
-                android:singleLine="true"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/tvTo"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="30dp"
-                android:layout_marginTop="5dp"
-                android:backgroundTint="@color/myColor"
-                android:background="@drawable/orders_item_shape"
-                android:textCursorDrawable="@drawable/cursor_color"
-                android:layout_marginBottom="5dp"
-                android:drawablePadding="8dp"
-                android:gravity="center"
-                android:text="@string/To"
-                android:textColor="@color/white"
-                android:padding="10dp"
-                android:singleLine="true"
-                android:textSize="16sp" />
-
-        </RelativeLayout>
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1px"
-            android:background="@color/myColor" />
-
         <EditText
             android:id="@+id/etAvailable"
             android:layout_width="fill_parent"
@@ -144,6 +96,86 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textSize="16sp" />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="@color/myColor" />
+
+        <TextView
+            android:id="@+id/tvScedule"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="Schedule:"
+            android:fontFamily="@font/uber_move_bold"
+            android:padding="5dp"
+            android:textColor="@color/black"
+            android:singleLine="true"
+            android:textSize="16sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvFrom"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginTop="5dp"
+                android:backgroundTint="@color/myColor"
+                android:background="@drawable/orders_item_shape"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:layout_marginBottom="5dp"
+                android:gravity="center"
+                android:text="@string/From"
+                android:textColor="@color/white"
+                android:padding="10dp"
+                android:layout_margin="10dp"
+                android:singleLine="true"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvPlace"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginTop="5dp"
+                android:backgroundTint="@color/myColor"
+                android:background="@drawable/orders_item_shape"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:layout_marginBottom="5dp"
+                android:gravity="center"
+                android:text="@string/To"
+                android:textColor="@color/white"
+                android:padding="10dp"
+                android:layout_margin="10dp"
+                android:singleLine="true"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvTo"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginTop="5dp"
+                android:backgroundTint="@color/myColor"
+                android:background="@drawable/orders_item_shape"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:layout_marginBottom="5dp"
+                android:drawablePadding="8dp"
+                android:gravity="center"
+                android:text="@string/From"
+                android:textColor="@color/white"
+                android:padding="10dp"
+                android:layout_margin="10dp"
+                android:singleLine="true"
+                android:textSize="16sp" />
+
+        </LinearLayout>
 
         <View
             android:layout_width="fill_parent"
@@ -180,6 +212,7 @@
                     android:gravity="center"
                     android:text="Pick Image"
                     android:textColor="@color/white"
+                    android:backgroundTint="@color/myColor"
                     style="@style/Widget.MaterialComponents.Button"/>
 
             </LinearLayout>
@@ -191,17 +224,23 @@
             android:layout_height="1px"
             android:background="@color/myColor" />
 
-        <Button
-            android:id="@+id/btnDone"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/loginbutton_selector"
-            android:padding="3dp"
-            android:text="@string/done"
-            android:textColor="#FFFFFF"
-            android:textSize="17sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnDone"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_weight="1"
+                android:layout_marginTop="40dp"
+                style="@style/Widget.MaterialComponents.Button"
+                android:text="@string/done"
+                android:backgroundTint="@color/myColor"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
