--- a/app/src/main/res/drawable/ripple.xml
+++ b/app/src/main/res/drawable/ripple.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- An white rectangle ripple. -->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@android:color/white">
-    <item
-        android:id="@android:id/mask"
-        android:gravity="center">
+    android:color="@color/textBackColor">
+
+    <item android:id="@android:id/mask">
+
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/white"/>
+
+            <solid android:color="@color/myColor" />
+
+            <corners android:radius="10dp" />
+
         </shape>
+
     </item>
+
 </ripple>
