--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -35,26 +35,44 @@
             android:orientation="vertical"
             android:padding="15dp">
 
-            <EditText
-                android:id="@+id/etItemName"
-                android:layout_width="fill_parent"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/orders_item_shape"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
-                android:hint="@string/itemname"
-                android:inputType="text"
-                android:padding="10dp"
-                android:singleLine="true"
-                android:textCursorDrawable="@drawable/cursor_color"
-                android:textSize="16sp" />
+                app:boxStrokeColor="@color/myColor"
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp">
+
+                <EditText
+                    android:id="@+id/etItemName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:hint="@string/itemname"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
                 android:background="@color/myColor" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:boxStrokeColor="@color/myColor"
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp">
 
             <EditText
                 android:id="@+id/etItemPrice"
@@ -62,15 +80,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/orders_item_shape"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
                 android:hint="@string/price"
                 android:inputType="number"
                 android:padding="10dp"
                 android:singleLine="true"
-                android:textCursorDrawable="@drawable/cursor_color"
                 android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <View
                 android:layout_width="fill_parent"
@@ -86,13 +102,25 @@
                 app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
                 <TextView
-                    android:id="@+id/tvAvailable"
+                    android:id="@+id/tvAvailablePlace"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
+                    android:text="Available: "
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/tvAvailable"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/tvAvailablePlace"
+                    android:layout_marginStart="10dp"
                     android:text="Yes"
-                    android:textColor="@color/myColor"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:visibility="gone" />
 
@@ -101,9 +129,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/tvAvailablePlace"
                     android:layout_marginStart="10dp"
                     android:text="No"
-                    android:textColor="@color/myColor"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:visibility="visible" />
 
@@ -122,18 +151,51 @@
                 android:layout_marginTop="5dp"
                 android:background="@color/myColor" />
 
-            <Spinner
-                android:id="@+id/spCategories"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView_spinner"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/orders_item_shape"
-                android:popupBackground="@drawable/orders_item_shape"/>
+                android:layout_height="50dp"
+                android:elevation="5dp"
+                app:cardUseCompatPadding="true"
+                android:layout_marginTop="10dp" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/tvSpinnerHead"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:text="@string/select_category"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/black"
+                        android:visibility="visible"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:includeFontPadding="false"/>
+
+                    <ImageView
+                        android:id="@+id/ivCategories"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrow_down"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="10dp"
+                        android:foreground="@drawable/ripple"
+                        android:background="@android:color/transparent"/>
+
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:background="@color/myColor" />
 
             <TextView
@@ -146,7 +208,7 @@
                 android:padding="5dp"
                 android:singleLine="true"
                 android:text="Schedule:"
-                android:textColor="@color/myColor"
+                android:textColor="@color/black"
                 android:textSize="16sp" />
 
             <LinearLayout
@@ -157,20 +219,17 @@
                 <TextView
                     android:id="@+id/tvFrom"
                     android:layout_width="70dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_margin="10dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="1"
-                    android:background="@drawable/orders_item_shape"
                     android:backgroundTint="@color/myColor"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:singleLine="true"
+                    style="@style/Widget.AppCompat.Button"
+                    android:background="@drawable/orders_item_shape"
+                    android:foreground="@drawable/ripple"
                     android:text="@string/From"
-                    android:textColor="@color/white"
-                    android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="16sp" />
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/tvPlace"
@@ -193,21 +252,17 @@
                 <TextView
                     android:id="@+id/tvTo"
                     android:layout_width="70dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_margin="10dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="1"
-                    android:background="@drawable/orders_item_shape"
                     android:backgroundTint="@color/myColor"
-                    android:drawablePadding="8dp"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:singleLine="true"
+                    style="@style/Widget.AppCompat.Button"
+                    android:background="@drawable/orders_item_shape"
+                    android:foreground="@drawable/ripple"
                     android:text="@string/From"
-                    android:textColor="@color/white"
-                    android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="16sp" />
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
@@ -245,7 +300,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/myColor"
-                        android:gravity="center"
                         android:text="Pick Image"
                         android:textColor="@color/white" />
 
